<resources>
    <string name="app_name">contrato</string>
    <string name="btnCadastro">Cadatre-se</string>
    <string name="btnEntrar">Entrar</string>
    <string name="title_activity_cliente">Cliente</string>
    <string name="title_activity_prestador">Prestador</string>
    <string name="title_activity_administrador">Administrador</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_prestador">Prestador</string>
    <string name="title_cliente">Cliente</string>
    <string name="title_ordempagamento">Ordem de Pagamento </string>
    <string name="title_tipoprestador">Tipo de Prestador</string>
    <string name="txtTPDesc">Tipo de Prestador</string>
</resources>
