<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_prestador"
        android:icon="@drawable/ic_content_add"
        android:title="@string/title_prestador" />

    <item
        android:id="@+id/navigation_cliente"
        android:icon="@drawable/ic_content_add"
        android:title="@string/title_cliente" />

    <item
        android:id="@+id/navigation_tipoprestador"
        android:icon="@drawable/ic_content_add"
        android:title="@string/title_tipoprestador" />

    <item
        android:id="@+id/navigation_ordempagamento"
        android:icon="@drawable/ic_content_add"
        android:title="@string/title_ordempagamento" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_content_add"
        android:title="@string/title_home" />


</menu>
