<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="contrato.com.activities.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="contrato.com.activities.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="contrato.com.activities.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_prestador"
        android:name="contrato.com.activities.ui.prestador.PrestadorFragment"
        android:label="@string/title_prestador"
        tools:layout="@layout/fragment_prestador" />

    <fragment
        android:id="@+id/navigation_cliente"
        android:name="contrato.com.activities.ui.cliente.ClienteFragment"
        android:label="@string/title_cliente"
        tools:layout="@layout/fragment_cliente" />
</navigation>